# CPE476Lab1

./: '  .gitignore  .main.cpp.swp  2  Booth.cpp  Booth.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.cpp~  Camera.h  Clickable.h  Clicks.cpp  Clicks.h  Extra.h  FontAtlas.h  FontEngine.cpp  FontEngine.h  GLSL.cpp  Karaoke.cpp  Karaoke.h  Makefile  Makefile.new  Makefile.old  Makefile_  Makefile_mac  Makefile_unix  Makefile~  Minigame.cpp  Minigame.h  Model.cpp  Model.h  Object.cpp  Object.cpp~  Object.h  Object.h~  Particle.cpp  Particle.h  ParticleTexture.h  Player.cpp  (+69 more)
freetype-2.5.5/builds/unix/: config.status  libtool  unix-cc.mk  unix-def.mk
freetype-2.5.5/objs/: apinames  autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlcdfil.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  fttype1.lo  ftwinfnt.lo  ftxf86.lo  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  truetype.lo  type1.lo  type1cid.lo  (+2 more)
freetype-2.5.5/objs/.libs/: libfreetype.6.dylib  libfreetype.lai
objs/: fountain.mtl  ground_sakura.mtl  hammer.mtl  kaito.mtl  len.mtl  miku.mtl  rin.mtl  screen.mtl  skydome_day.mtl  squish_blue.mtl  squish_purple.mtl  squish_red.mtl  stall_mid.mtl  watermelon.mtl
shaders/: frag.glsl  frag_cook.glsl  frag_phong.glsl  glow_frag.glsl  vert.glsl  vert_cook.glsl
